--- a/zd_app/assets/iframe.html
+++ b/zd_app/assets/iframe.html
@@ -1,8 +1,10 @@
-<html>
+<html style="overflow-y: auto">
 <head>
   <meta charset="utf-8">
   <!-- http://garden.zendesk.com -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-bedrock@7.0" type="text/css">
+  <!-- garden stylesheet #2 below -->
+  <!-- <link rel="stylesheet" href="https://assets.zendesk.com/apps/sdk-assets/css/0/zendesk_garden.css" type="text/css"> -->
 </head>
 <body>
   <h2 class="u-gamma">Hello, World!</h2>
